Add one id to linear bottom

--- a/ARcowabungaproject/res/layout/order_list_layout.xml
+++ b/ARcowabungaproject/res/layout/order_list_layout.xml
@@ -15,6 +15,7 @@
      <!-- BUTTONS -->
 
     <LinearLayout
+        android:id="@+id/bottomLinearMenu"
         android:layout_width="match_parent"
         android:layout_height="42dp"
         android:background="@color/red"
