--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -3,21 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:minHeight="130dp"
+    android:minHeight="80dp"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp" >
+    android:paddingRight="5dp"
+    android:gravity="center" >
 
     <View
         android:id="@id/separatorTop"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginLeft="15dp"
         android:layout_alignParentTop="true"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/transparent" />
 
     <ImageView
         android:id="@+id/imageInPizzaItem"
         android:layout_width="50dp"
+        android:maxWidth="50dp"
         android:layout_height="50dp"
+        android:maxHeight="50dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:contentDescription="@string/pizza_icon"
@@ -31,10 +37,9 @@
         android:layout_below="@id/separatorTop"
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="20dp"
         android:layout_toLeftOf="@+id/priceTextInPizzaItem"
         android:layout_toRightOf="@id/imageInPizzaItem"
-        android:background="#335533"
         android:text="titol"
         android:textColor="@color/red"
         android:textSize="18sp" >
@@ -47,9 +52,8 @@
         android:layout_below="@id/separatorTop"
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="20dp"
         android:layout_toLeftOf="@+id/separatorRight"
-        android:background="#222333"
         android:text="preu"
         android:textColor="@color/red"
         android:textSize="15sp" />
@@ -64,7 +68,6 @@
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@id/separatorRight"
         android:layout_toRightOf="@id/imageInPizzaItem"
-        android:background="#33FF33"
         android:text="desc"
         android:textSize="10sp" >
     </TextView>
@@ -78,22 +81,34 @@
         android:layout_toLeftOf="@+id/imageButtonInPizzaItem"
         android:background="@android:color/darker_gray" />
 
-    <ImageButton
+    <LinearLayout
         android:id="@id/imageButtonInPizzaItem"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/iconorderlist"
-        android:contentDescription="" />
+        android:clickable="true"
+        android:gravity="center" >
+
+        <ImageView
+            android:id="@+id/imageButtonInPizzaItemContent"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/iconorderlist"
+            android:contentDescription="@string/content_description_img" />
+    </LinearLayout>
 
     <View
         android:id="@id/separatorBottom"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/transparent" />
 
 </RelativeLayout>
