--- a/ARcowabungaproject/res/layout/pizza_list_layout.xml
+++ b/ARcowabungaproject/res/layout/pizza_list_layout.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:groupIndicator="@android:color/transparent">
+        android:groupIndicator="@null"
+        android:divider="@color/cacaca"
+        android:dividerHeight="1dp">
     </ExpandableListView>
 
 </LinearLayout>
