--- a/ARcowabungaproject/res/layout/pizza_list_intro_layout.xml
+++ b/ARcowabungaproject/res/layout/pizza_list_intro_layout.xml
@@ -8,6 +8,7 @@
         android:id="@+id/makeYourPizza"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="130dp"
         android:background="@color/red"
         android:orientation="vertical"
         android:padding="10dp" >
@@ -36,8 +37,11 @@
     <TextView
         android:id="@+id/makeYourPizza_description_second"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/or_choose" />
+        android:layout_height="40dp"
+        android:text="@string/or_choose"
+        android:textColor="@color/light_cyan"
+        android:gravity="bottom"
+        android:layout_marginLeft="15dp" />
     
 
 </LinearLayout>
