--- a/ARcowabungaproject/res/layout/expanded_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/expanded_pizza_layout.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:minHeight="130dp"
-    android:background="#F0F0F0" >
+    android:background="@color/background_expandable_expanded_item" >
 
     <View
         android:id="@+id/separatorTop"
@@ -30,6 +30,8 @@
         android:id="@+id/textInPizzaSubItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="80dp"
+        android:minHeight="50dp"
         android:layout_toRightOf="@id/imageInPizzaSubItem"
         android:layout_alignParentRight="true"
         android:layout_below="@id/separatorTop"
@@ -37,23 +39,27 @@
         android:layout_marginTop="18dp"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
-        android:background="#33FF33" >
+        android:textColor="@color/text_color_listview" >
     </TextView>
+
+    <View
+        android:id="@id/separatorBottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:id="@id/pizzaButtonInPizzaSubItem"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/imageInPizzaSubItem"
-        android:layout_above="@+id/separatorBottom"
-        android:orientation="horizontal"
-        android:background="@color/red" 
-        android:layout_marginBottom="18dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_alignBottom="@+id/imageInPizzaSubItem"
+        android:layout_alignRight="@+id/textInPizzaSubItem"
+        android:layout_toRightOf="@+id/imageInPizzaSubItem"
+        android:background="@color/red"
+        android:clickable="true"
         android:gravity="center"
-        android:clickable="true" >
+        android:orientation="horizontal" >
 
         <ImageView
             android:layout_width="25dp"
@@ -69,12 +75,5 @@
             android:text="@string/third_D_view"
             android:textColor="@android:color/white" />
     </LinearLayout>
-
-    <View
-        android:id="@id/separatorBottom"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/darker_gray" />
 
 </RelativeLayout>
