--- a/ARcowabungaproject/res/layout/listitem_drink_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_drink_layout.xml
@@ -2,16 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="60dp"
-    android:minHeight="130dp"
+    android:minHeight="70dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp" >
-    
-      <View
-        android:id="@id/separatorTop"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentTop="true"
-        android:background="@android:color/darker_gray" />
       
        <ImageView
         android:id="@+id/imageInDrinkItem"
@@ -31,10 +24,9 @@
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/priceTextInDrinkItem"
         android:layout_toRightOf="@id/imageInDrinkItem"
-        android:background="#335533"
         android:text="titol"
-        android:textColor="@color/red"
-        android:textSize="18sp" >
+        android:textColor="@color/text_color_listview"
+        android:textSize="23sp" >
     </TextView>
 
     <TextView
@@ -44,10 +36,9 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@+id/separatorRight"
-        android:background="#222333"
         android:text="preu"
-        android:textColor="@color/red"
-        android:textSize="15sp" />
+        android:textColor="@color/text_color_listview"
+        android:textSize="23sp" />
 
     <View
         android:id="@id/separatorRight"
@@ -60,8 +51,8 @@
 
     <ImageButton
         android:id="@id/imageButtonInDrinkItem"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
@@ -72,6 +63,8 @@
     <View
         android:id="@id/separatorBottom"
         android:layout_width="match_parent"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
         android:background="@android:color/darker_gray" />
