--- a/ARcowabungaproject/res/layout/listitem_offer_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_offer_layout.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="75dp"
     android:clickable="true"
-    android:minHeight="130dp"
+    android:minHeight="75dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp" >
-
-    <View
-        android:id="@id/separatorTop"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentTop="true"
-        android:background="@android:color/darker_gray" />
 
     <ImageView
         android:id="@+id/imageInOfferItem"
@@ -28,31 +21,27 @@
         android:id="@+id/titleTextInOfferItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/separatorTop"
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="9dp"
         android:layout_toLeftOf="@+id/priceTextInOfferItem"
         android:layout_toRightOf="@id/imageInOfferItem"
-        android:background="#335533"
-        android:text="titol"
-        android:textColor="@color/red"
-        android:textSize="18sp" >
+        android:text="Pizza con piña"
+        android:textColor="@color/text_color_listview"
+        android:textSize="23sp" >
     </TextView>
 
     <TextView
         android:id="@id/priceTextInOfferItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/separatorTop"
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="9dp"
         android:layout_toLeftOf="@+id/separatorRight"
-        android:background="#222333"
-        android:text="preu"
-        android:textColor="@color/red"
-        android:textSize="15sp" />
+        android:text="5€"
+        android:textColor="@color/text_color_listview"
+        android:textSize="23sp" />
 
     <TextView
         android:id="@+id/descTextInOfferItem"
@@ -64,9 +53,9 @@
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@id/separatorRight"
         android:layout_toRightOf="@id/imageInOfferItem"
-        android:background="#33FF33"
         android:text="desc"
-        android:textSize="10sp" >
+        android:textColor="@color/text_gray"
+        android:textSize="15sp" >
 
     </TextView>
 
@@ -81,8 +70,8 @@
 
     <ImageButton
         android:id="@id/imageButtonInOfferItem"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
@@ -95,6 +84,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:background="@android:color/darker_gray" />
 
 </RelativeLayout>
