--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:minHeight="80dp"
+    android:layout_height="95dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     android:gravity="center" >
@@ -16,20 +15,6 @@
         android:layout_alignParentTop="true"
         android:background="@android:color/transparent" />
 
-    <ImageView
-        android:id="@+id/imageInPizzaItem"
-        android:layout_width="50dp"
-        android:maxWidth="50dp"
-        android:layout_height="50dp"
-        android:maxHeight="50dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="15dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/pizza_icon"
-        android:paddingRight="5dp"
-        android:src="@drawable/home_image" />
-
     <TextView
         android:id="@+id/titleTextInPizzaItem"
         android:layout_width="wrap_content"
@@ -37,12 +22,12 @@
         android:layout_below="@id/separatorTop"
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_toLeftOf="@+id/priceTextInPizzaItem"
-        android:layout_toRightOf="@id/imageInPizzaItem"
+        android:layout_toRightOf="@+id/imageInPizzaItem"
         android:text="titol"
-        android:textColor="@color/red"
-        android:textSize="18sp" >
+        android:textColor="@color/text_color_listview"
+        android:textSize="22sp" >
     </TextView>
 
     <TextView
@@ -52,11 +37,11 @@
         android:layout_below="@id/separatorTop"
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:layout_toLeftOf="@+id/separatorRight"
         android:text="preu"
-        android:textColor="@color/red"
-        android:textSize="15sp" />
+        android:textColor="@color/text_color_listview"
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/descTextInPizzaItem"
@@ -69,15 +54,14 @@
         android:layout_toLeftOf="@id/separatorRight"
         android:layout_toRightOf="@id/imageInPizzaItem"
         android:text="desc"
-        android:textSize="10sp" >
+        android:textSize="15sp"
+        android:textColor="@color/text_gray" >
     </TextView>
 
     <View
         android:id="@id/separatorRight"
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/imageButtonInPizzaItem"
         android:background="@android:color/darker_gray" />
 
@@ -96,19 +80,22 @@
 
         <ImageView
             android:id="@+id/imageButtonInPizzaItemContent"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:background="@drawable/iconorderlist"
             android:contentDescription="@string/content_description_img" />
     </LinearLayout>
 
-    <View
-        android:id="@id/separatorBottom"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/transparent" />
+    <ImageView
+        android:id="@id/imageInPizzaItem"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@id/separatorTop"
+        android:layout_alignTop="@+id/titleTextInPizzaItem"
+        android:contentDescription="@string/pizza_icon"
+        android:maxHeight="50dp"
+        android:maxWidth="50dp"
+        android:paddingRight="5dp"
+        android:src="@drawable/home_image" />
 
 </RelativeLayout>
