--- a/ARcowabungaproject/res/layout/pizza_list_intro_layout.xml
+++ b/ARcowabungaproject/res/layout/pizza_list_intro_layout.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" 
             android:text="@string/create_your_own_pizza"
-            android:textSize="20sp"
+            android:textSize="21sp"
             android:textColor="@android:color/white"/>
 
         <TextView
@@ -26,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" 
             android:text="@string/create_your_own_pizza_desc"
-            android:textSize="12sp"
+            android:textSize="15sp"
+            android:textStyle="italic"
             android:textColor="@android:color/white"/>
 
         <ImageView
@@ -41,6 +42,7 @@
         android:text="@string/or_choose"
         android:textColor="@color/light_cyan"
         android:gravity="bottom"
+        android:textSize="17sp"
         android:layout_marginLeft="15dp" />
     
 
