--- a/ARcowabungaproject/res/values/colors.xml
+++ b/ARcowabungaproject/res/values/colors.xml
@@ -12,4 +12,5 @@
 	<item name="text_gray" type="color">#979797</item>
 	<item name="background_expandable_expanded_item" type="color">#f0f0f0</item>
  	<item name="text_color_listview" type="color">#e13546</item>
+ 	<item name="background_red_order" type="color">#e23647</item>
 </resources> 
