--- a/ARcowabungaproject/res/layout/listitem_product_final_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_product_final_layout.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:minHeight="230dp"
+    android:orientation="vertical"
+    android:clickable="false" >
 
     <RelativeLayout
         android:id="@+id/blue_subtotal_layout"
@@ -46,7 +48,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/taxes_text"
         android:textColor="@android:color/darker_gray"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/order_withtax_price"
@@ -58,7 +60,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/taxes_value"
         android:textColor="@android:color/darker_gray"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/order_shipping_cost_text"
@@ -70,7 +72,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/shipping_cost_text"
         android:textColor="@android:color/darker_gray"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/order_shipping_cost"
@@ -83,7 +85,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/shipping_cost_value"
         android:textColor="@android:color/darker_gray"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <View
         android:id="@+id/separator_total_bottom"
@@ -102,7 +104,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/total_text"
-        android:textColor="@android:color/black"
+        android:textColor="@color/text_color_listview"
         android:textSize="20sp" />
 
     <TextView
@@ -114,7 +116,69 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:text="@string/total_price"
-        android:textColor="@android:color/black"
+        android:textColor="@color/text_color_listview"
         android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@+id/order_text_total"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp" >
+
+        <LinearLayout
+            android:id="@+id/shipping_leftlinear_button"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@layout/custom_button_order_white"
+            android:gravity="center_vertical"
+            android:focusable="false" >
+
+            <ImageView
+                android:layout_marginLeft="5dp"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:contentDescription="@string/content_description_img"
+                android:src="@drawable/iconpizzared" />
+
+            <TextView
+                android:id="@+id/shipping_leftlinear_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/shipping_leftbutton_moreitems"
+                android:textColor="@color/text_color_listview"
+                android:textSize="20sp"
+                android:layout_marginLeft="7dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/shipping_rightlinear_button"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@layout/custom_button_order_red"
+            android:gravity="center_vertical"
+            android:focusable="false" >
+            
+            <ImageView
+                android:layout_marginLeft="27dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:contentDescription="@string/content_description_img"
+                android:src="@drawable/iconactualorder" />
+
+            <TextView
+                android:id="@+id/shipping_rightlinear_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/shipping_rightbutton_makeorder"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:layout_marginLeft="7dp" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
