--- a/ARcowabungaproject/res/layout/listitem_product_intro_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_product_intro_layout.xml
@@ -4,27 +4,32 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
     
-        <LinearLayout 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp">
-        <ImageView 
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/iconorderlist"
-            android:contentDescription="@string/basket_icon"/>   
-        <TextView
-            android:id="@+id/productIntroText"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="9dp"
-            android:text="@string/menu_actual_order"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"/>
-    </LinearLayout>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:contentDescription="@string/basket_icon"
+                android:src="@drawable/iconorderlist" />
+
+            <TextView
+                android:id="@+id/productIntroText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/imageView1"
+                android:layout_marginLeft="5dp"
+                android:text="@string/menu_actual_order"
+                android:textColor="@color/text_color_listview"
+                android:textSize="20sp" />
+        </RelativeLayout>
     
      <View
         android:id="@id/separatorBottom"
