--- a/ARcowabungaproject/res/layout/listitem_product_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_product_layout.xml
@@ -8,13 +8,6 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp" >
 
-    <View
-        android:id="@id/separatorTop"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentTop="true"
-        android:background="@android:color/darker_gray" />
-
     <ImageView
         android:id="@+id/imageInProductItem"
         android:layout_width="50dp"
@@ -25,17 +18,6 @@
         android:contentDescription="@string/pizza_icon"
         android:paddingRight="5dp"/>
 	<!--android:src="@drawable/icontabpizzasoff"-->
-    <TextView
-        android:id="@+id/titleTextInProductItem"
-        android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_below="@id/separatorTop"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_toRightOf="@+id/imageInProductItem"
-        android:background="#335533"
-        android:text="PIZZA CALZONE"
-        android:textColor="@color/red" />
 
     <ImageButton
         android:id="@+id/trashIcon"
@@ -45,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:layout_toLeftOf="@+id/priceTextInProductItem"
-        android:background="#FF3333"
+        android:background="@android:color/white"
         android:src="@drawable/icontaboffersoff"
         android:text="trash"
         android:textColor="#E63444" />
@@ -58,9 +40,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="23dp"
-        android:background="#FF3333"
         android:text="8,50€"
-        android:textColor="#FFFFFF" />
+        android:textColor="@color/text_gray"
+        android:textSize="17sp" />
 
     <LinearLayout
         android:id="@+id/extraIngredientLayoutInProductItem"
@@ -68,7 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/titleTextInProductItem"
         android:layout_below="@id/titleTextInProductItem"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_marginBottom="7dp" >
 
         <TextView
             android:id="@+id/extraIngredientIntro"
@@ -77,10 +60,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="5dp"
-            android:background="#FF3333"
             android:text="@string/extra_ingredient_in_product_item"
-            android:textColor="#FFFFFF"
-            android:textSize="10sp" />
+            android:textColor="@color/text_gray"
+            android:textSize="17sp" />
     </LinearLayout>
 
     <View
@@ -89,5 +71,15 @@
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
         android:background="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/titleTextInProductItem"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_alignTop="@+id/imageInProductItem"
+        android:layout_toRightOf="@+id/imageInProductItem"
+        android:text="PIZZA CALZONE"
+        android:textColor="@color/text_gray"
+        android:textSize="23sp" />
 
 </RelativeLayout>
