--- a/ARcowabungaproject/res/layout/expanded_order_layout.xml
+++ b/ARcowabungaproject/res/layout/expanded_order_layout.xml
@@ -5,14 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
-    android:background="#F0F0F0"
-    android:minHeight="130dp" >
-
-    <View
-        android:id="@+id/separatorTop"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+    android:background="@color/background_expandable_expanded_item"
+    android:minHeight="80dp" >
 
     <ImageView
         android:id="@+id/imageInOrderSubItem"
@@ -29,14 +23,14 @@
         android:id="@+id/titleInOrderSubItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/separatorTop"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
         android:layout_toLeftOf="@+id/priceInOrderSubItem"
         android:layout_toRightOf="@id/imageInOrderSubItem"
-        android:background="#33FF88"
-        android:text="title" />
+        android:text="title"
+        android:textColor="@color/lastorders_text_color"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@id/priceInOrderSubItem"
@@ -44,12 +38,12 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/titleInOrderSubItem"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/separatorTop"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
-        android:background="#33FF33"
-        android:text="price" />
+        android:text="price"
+        android:textColor="@color/lastorders_text_color"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/additionalIngredientsTitleInOrderSubItem"
@@ -58,9 +52,9 @@
         android:layout_below="@id/titleInOrderSubItem"
         android:layout_marginBottom="2dp"
         android:layout_toRightOf="@id/imageInOrderSubItem"
-        android:background="#335533"
-        android:textSize="8sp"
-        android:text="@string/additional_ingredents" />
+        android:text="@string/additional_ingredents"
+        android:textColor="@color/lastorders_text_color"
+        android:textSize="15sp" />
 
     <View
         android:id="@+id/separatorAdditionalIngredientsTitle"
@@ -75,11 +69,11 @@
         android:id="@+id/additionalIngredientsInOrderSubItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
-        android:layout_marginTop="3dp"
-        android:layout_below="@id/separatorAdditionalIngredientsTitle"
         android:layout_alignLeft="@id/additionalIngredientsTitleInOrderSubItem"
         android:layout_alignParentRight="true"
+        android:layout_below="@id/separatorAdditionalIngredientsTitle"
+        android:layout_marginBottom="18dp"
+        android:layout_marginTop="3dp"
         android:background="#e73445"
         android:clickable="true"
         android:gravity="center"
