--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="95dp"
+    android:layout_height="70dp"
+    android:minHeight="70dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     android:gravity="center" >
@@ -97,5 +98,12 @@
         android:maxWidth="50dp"
         android:paddingRight="5dp"
         android:src="@drawable/home_image" />
+
+    <View
+        android:id="@+id/separatorBottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/darker_gray" />
 
 </RelativeLayout>
