--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:minHeight="70dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
+    android:layout_height="85dp"
+    android:minHeight="85dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:gravity="center" >
 
     <View
@@ -21,11 +21,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/separatorTop"
-        android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
         android:layout_toLeftOf="@+id/priceTextInPizzaItem"
         android:layout_toRightOf="@+id/imageInPizzaItem"
+        android:gravity="center_vertical"
         android:text="titol"
         android:textColor="@color/text_color_listview"
         android:textSize="22sp" >
@@ -36,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/separatorTop"
-        android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="15dp"
         android:layout_toLeftOf="@+id/separatorRight"
@@ -61,6 +60,8 @@
 
     <View
         android:id="@id/separatorRight"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:layout_toLeftOf="@+id/imageButtonInPizzaItem"
@@ -100,10 +101,11 @@
         android:src="@drawable/home_image" />
 
     <View
-        android:id="@+id/separatorBottom"
+        android:id="@+id/separatorTop"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
+        android:layout_marginTop="7dp"
+        android:layout_alignParentTop="true"
         android:background="@android:color/darker_gray" />
 
 </RelativeLayout>
