--- a/ARcowabungaproject/res/values/colors.xml
+++ b/ARcowabungaproject/res/values/colors.xml
@@ -10,7 +10,7 @@
     <item name="dark_red_400" type="color">#5a1b22</item>
  	<item name="cacaca" type="color">#cacaca</item>
 	<item name="text_gray" type="color">#979797</item>
-	<item name="background_expandable_expanded_item" type="color">#f0f0f0</item>
+	<item name="background_expandable_expanded_item" type="color">#e0e0e0</item>
  	<item name="text_color_listview" type="color">#e13546</item>
  	<item name="background_red_order" type="color">#e23647</item>
  	<item name="lastorders_text_color" type="color">#969696</item>
