--- a/ARcowabungaproject/res/layout/expanded_offer_layout.xml
+++ b/ARcowabungaproject/res/layout/expanded_offer_layout.xml
@@ -2,25 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:minHeight="130dp"
-    android:background="#F0F0F0">
-    
-    
-    <View
-        android:id="@+id/separatorTop"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:minHeight="60dp"
+    android:background="@color/dark_red_100">
      <ImageView
         android:id="@+id/imageInOfferSubItem"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="10dp"
         android:contentDescription="@string/pizza_icon"
-        android:paddingRight="5dp"
         android:src="@drawable/home_image" />
        
        <TextView
@@ -28,13 +21,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_toLeftOf="@+id/priceTextInOfferSubItem"
         android:layout_toRightOf="@id/imageInOfferSubItem"
-        android:background="#335533"
         android:text="titol"
-        android:textColor="@color/red"
-        android:textSize="18sp" >
+        android:textColor="@android:color/white"
+        android:textSize="23sp" >
     </TextView>
 
     <TextView
@@ -42,17 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="15dp"
         android:layout_alignParentRight="true"
-        android:background="#222333"
         android:text="preu"
-        android:textColor="@color/red"
-        android:textSize="15sp" />
-    
- 	<View
-        android:id="@+id/separatorBottom"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/darker_gray" />
+        android:textColor="@android:color/white"
+        android:textSize="23sp" />
 </RelativeLayout>
