--- a/ARcowabungaproject/res/layout/offer_list_layout.xml
+++ b/ARcowabungaproject/res/layout/offer_list_layout.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:groupIndicator="@android:color/transparent">
+        android:groupIndicator="@null"
+        android:divider="@null">
     </ExpandableListView>
 
 </LinearLayout>
