--- a/ARcowabungaproject/res/layout/expanded_order_ending_layout.xml
+++ b/ARcowabungaproject/res/layout/expanded_order_ending_layout.xml
@@ -114,7 +114,7 @@
         android:layout_below="@id/separatorTotalBottom"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:text="@string/total_price"
+        android:text="@string/shipping_cost_value"
         android:textColor="@color/text_color_listview"
         android:textSize="23sp" />
 
